# querybuilder

./: .gitignore  CMakeLists.txt  main.cpp  my_project.h
example/: CMakeLists.txt  main.cpp
querybuilder/: CMakeLists.txt  QueryBuilder.h
src/: CMakeLists.txt  my_project.cpp  query_builder.cpp  query_builder_wrapper.cpp  query_builder_wrapper.h
test/: CMakeLists.txt  test_querybuilder.cpp
wrapper/: CMakeLists.txt  QueryBuilderWrapper.cpp  QueryBuilderWrapper.h
